fix spacing

--- a/public/css/stylesheet-override2.css
+++ b/public/css/stylesheet-override2.css
@@ -977,7 +977,7 @@ padding-right: 14px; */
 dialog {
   z-index: 10;
   margin-top: 10px;
-  background: green;
+  background: #007b5f;
   border: none;
   border-radius: 1rem;
 }
@@ -1796,7 +1796,8 @@ font-size: 15px;;
 .popup-content .popup-image img {
   margin-top: 20px;     /* This adds space above the image */
 color: #c10a0a;
-width: 500px;
+display: block;
+max-width: 475px;
 max-height: 300px;
 }
 
@@ -1820,8 +1821,8 @@ max-height: 300px;
 .popup-content .popup-image img {
   margin-top: 20px; /* This adds space above the image */
   color: #c10a0a;
+  max-width: fit-content;
 }
-
 #light-box {
   max-width: 1400px;
 }
